# Student-Corner-Backend

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirement.txt
ai_interviewer/: README.md  exceptions.py  interviewer_agent.py  logger.py  models.py  resume.py  session_store.py
ai_interviewer/routers/: answer.py  session.py
ai_interviewer/services/: middleware_client.py  tts.py  voice_agent.py
code_reviewer/: README.md  __init__.py  exceptions.py  logger.py  models.py  reviewer_agent.py  session_store.py
code_reviewer/routers/: chat.py  review.py  session.py
code_reviewer/services/: __init__.py  middleware_client.py
db/: README.md  __init__.py  mongo.py  session_repository.py
roadmap_generator/: README.md  exceptions.py  logger.py  models.py  roadmap_agent.py  session_store.py
roadmap_generator/routers/: roadmap.py
roadmap_generator/services/: data.py  middleware.py  tools.py
testFolder/: coder_reviewer.ipynb  coder_reviewer_1.ipynb  coder_reviewer_2.ipynb  interviewer_agent (6).ipynb  lab1.ipynb
