[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "elevenlabs>=2.38.1",
    "fastapi>=0.135.1",
    "ffmpeg>=1.4",
    "gradio>=6.9.0",
    "motor>=3.7.1",
    "openai>=2.26.0",
    "openai-agents>=0.10.5",
    "pypdf>=6.7.5",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
]
